fix(calendar): fix spacing

--- a/packages/components/src/calendar/Calendar.module.css
+++ b/packages/components/src/calendar/Calendar.module.css
@@ -11,22 +11,31 @@
     border: unset;
   }
 
+  table {
+    display: table;
+    border-collapse: unset;
+  }
+
   thead tr,
   tbody tr {
     background-color: unset;
   }
 
+  th,
+  & .day {
+    text-align: center;
+    min-width: 2.25rem;
+    box-sizing: content-box;
+    line-height: initial;
+  }
+
   th {
     font-weight: 500;
-    text-align: center;
     padding: 0.625rem 0;
-    min-width: 2.25rem;
   }
 
   & .day {
-    text-align: center;
     padding: 0.5rem 0;
-    min-width: 2.25rem;
   }
 
   background-color: --layer-01;
